# GB10-Demos

./: .gitignore  README.md
Data_Gov_RAG/: .dockerignore  Dockerfile  Dockerfile.llama  Makefile  README.md  app.py  diagnose.py  docker-compose.yml  documents.json  groups.json  init.sql  table_access.json  test_connect.py  test_rag_response.py  users.json
EXTRACT-elements/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
EXTRACT-elements/services/ollama/: Dockerfile  entrypoint.sh
EXTRACT-elements/services/postgres/: init.sql
EXTRACT-elements/services/sentence-transformers/: Dockerfile  app.py  requirements.txt
EXTRACT-elements/src/: app.py  db_handler.py  kg_handler.py  model_handler.py  object_store.py  pipeline.py  processor.py  vector_handler.py
GB10-multiagent-chatbot/: ADDING_NEW_MODELS_GUIDE.md  INFERENCE_DETAILS.md  MCP_INTEGRATION_GUIDE.md  check-gb10-health.sh  deploy-gb10.sh  docker-compose-models.yml  docker-compose.yml
GB10-multiagent-chatbot/backend/: config.json  pyproject.toml  requirements.txt
VLM/: .gitignore  Makefile  README.md  docker-compose.yml
VLM/backend/: Dockerfile  main.py  ocr_service.py  requirements.txt
VLM/frontend/: Dockerfile  nginx-chat.conf  nginx.conf  package-lock.json
VLM/frontend/src/: App.css  App.tsx
VLM/txt2kg_integration/: LICENSE  README.md  start.sh  stop.sh
VSS/: LICENSE  LICENSE-3rd-party.txt  LICENSE.DATA  Makefile  README.md
VSS/deploy/: 1_Deploy_VSS_docker_Crusoe.ipynb
VSS/eval/: Makefile  README.md  common.py  compose.yaml
VSS/perf-benchmark/: README.md  __init__.py  alert_review_benchmark.py  base.py  chat_completions_benchmark.py  defaults.yaml  file_burst_benchmark.py  gpu_monitor.py  latency_tracker.py  live_streams_benchmark.py  requirements.txt  single_file_benchmark.py  vlm_captions_benchmark.py  vss_perf_benchmark.py  vss_sample_config.yaml
VSS/src/video_timeline/: .gitignore  README.md  pyproject.toml
VSS/src/video_timeline/backend/gradio_videotimeline/: __init__.py  videotimeline.py
VSS/src/video_timeline/demo/: README.md  __init__.py  app.py
VSS/src/video_timeline/frontend/: Example.svelte  Index.svelte  gradio.config.js  index.ts  package-lock.json  package.json
VSS/src/video_timeline/frontend/shared/: InteractiveVideo.svelte  Player.svelte  Video.svelte  VideoControls.svelte  VideoPartition.svelte  VideoPlayer.svelte  VideoPreview.svelte  VideoTimeline.svelte  index.ts  utils.ts
(+404 files in other folders)
